--- a/index.html
+++ b/index.html
@@ -9,56 +9,50 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script data-main="main" src="libs/require.js"></script>
 </head>
 <body>
-<header>
-
-</header>
 <section class="main-section container-fluid p-0">
     <div class="row no-gutters">
         <aside id="search-box" class="col-6 col-md-4 col-lg-3">
             <div class="input-group p-1">
                 <input type="text" class="form-control" data-bind="textInput: filter">
-                <div class="input-group-append">
-                    <button id="searchBtn" class="btn btn-primary" type="button" data-toggle="collapse"
-                            data-target="#filters" aria-expanded="false" aria-controls="filters">
-                        Filter
-                    </button>
+                <div class="input-group-append dropdown show">
+                    <a class="btn btn-secondary dropdown-toggle" href="https://example.com" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Categories
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu"
+                         data-bind="foreach: categories">
+                        <div class="form-check ml-2">
+                            <input type="checkbox" class="form-check-input" value="$data"
+                                   data-bind="attr: {id: $index}, checkedValue: $data, checked: $root.selectedCategories">
+                            <label class="form-check-label" data-bind="attr: {for: $index}, text: $data"></label>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="collapse" id="filters">
-                <div class="form-check has-success ml-2">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" id="music" value="option1">
-                        Music
-                    </label>
-                </div>
-                <div class="form-check has-success ml-2">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" id="film" value="option1">
-                        Film
-                    </label>
-                </div>
-                <div class="form-check has-success ml-2">
-                    <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input" id="restaurant" value="option1">
-                        Restaurant
-                    </label>
-                </div>
-            </div>
-            <ul class="list-group" data-bind="foreach: filteredEvents">
-                <li class="list-group-item d-flex p-1" data-bind="event: {mouseover: openInfoWindow, mouseout: closeInfoWindow, click: setInfoWindow}">
+            <p class="notice" data-bind="visible: filteredEvents().length == 0">
+                <i class="fa fa-spinner fa-spin" id="loading-symbol" data-bind="if: nearByEvents().length == 0"></i>
+                <i class="far fa-dizzy" id="error-symbol"></i><br/>
+                <span id="message" data-bind="text: currentStatus"></span>
+            </p>
+            <ul class="list-group event-list-group" data-bind="foreach: filteredEvents,
+                                                               style: {visibility: nearByEvents().length > 0? 'visible':'hidden'}">
+                <li class="list-group-item d-flex p-1 mr-1 align-items-center" data-bind="event: {mouseover: openInfoWindow, mouseout: closeInfoWindow, click: setInfoWindow}">
                     <div class="col-4 p-1">
-                        <img class="img-thumbnail rounded" data-bind="attr: { src: imageUrl, alt: title}"/>
+                        <img class="event-img rounded" data-bind="attr: { src: imageUrl, alt: title}"/>
                     </div>
                     <div class="col-8 p-1">
-                        <a class="event-text" target="_blank" data-bind="text: title, attr: { href: url }, click: showLoading, clickBubble: false"></a>
+                        <a class="event-title" target="_blank" data-bind="text: title, attr: { href: url }, click: showLoading, clickBubble: false"></a>
                         <p>
-                            <i class="far fa-calendar" aria-hidden="true"></i><span class="event-text" data-bind="text: ' ' + dates.join(', ')"></span>
+                            <i class="far fa-calendar" aria-hidden="true"></i>
+                            <span class="event-text" data-bind="text: datesLiteral"></span>
+                            <small data-bind="text: '...', visible: dates.length > 2"></small>
                             <br/>
-                            <i class="fas fa-map-marker-alt" aria-hidden="true"></i><span class="event-text" data-bind="text: ' ' + locationLiteral"></span>
+                            <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
+                            <span class="event-text" data-bind="text: locationLiteral"></span>
                         </p>
                     </div>
                 </li>
@@ -66,7 +60,7 @@
         </aside>
         <div id="google-map-container" class="col-6 col-md-8 col-lg-9">
             <nav id="top-nav" class="p-1">
-                <button type="button" class="btn btn-info" data-bind="toggleSidebar: {}">
+                <button type="button" class="btn btn-info" disabled>
                     <i class="fas fa-align-left"></i>
                     <span>Toggle Sidebar</span>
                 </button>
@@ -78,5 +72,8 @@
 <footer>
 
 </footer>
+<script>
+
+</script>
 </body>
 </html>
