--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <section class="main-section container-fluid p-0">
     <div class="row no-gutters">
-        <aside id="search-box" class="col-6 col-md-4 col-lg-3">
+        <aside id="search-box" class="col-12 col-md-4">
             <div class="input-group p-1">
                 <input type="text" class="form-control" data-bind="textInput: filter">
                 <div class="input-group-append dropdown show">
@@ -58,7 +58,7 @@
                 </li>
             </ul>
         </aside>
-        <div id="google-map-container" class="col-6 col-md-8 col-lg-9">
+        <div id="google-map-container" class="col-12 col-md-8">
             <nav id="top-nav" class="p-1">
                 <button type="button" class="btn btn-info" disabled>
                     <i class="fas fa-align-left"></i>
